Fixed margins, :after selectors and making sure all objects is visible. Added shadow to indicate overflow of crops

--- a/app/css/imcrop.css
+++ b/app/css/imcrop.css
@@ -6,14 +6,19 @@ body {
     letter-spacing: 1px;
 }
 
-#imc_container {
-    position: relative;
+#imc {
     width: 80%;
     height: 350px;
-    background: #EFF3F2;
+    overflow: hidden;
 
     /* Adjust for work container and toolbar below img container */
-    margin-bottom: 127px;
+    padding-bottom: 130px;
+}
+
+#imc_container {
+    position: relative;
+    background: #EFF3F2;
+    height: 100%;
 }
 
 #imc_work_container {
@@ -54,12 +59,25 @@ body {
  * Preview area and preview images
  */
 .imc_preview_container {
-    height: 80px;
+    white-space: nowrap;
+    position: relative;
+}
+
+.imc_preview_container:after {
+    display: block;
+    position: absolute;
+    content: "";
+    width: 4px;
+    top: 6px;
+    right: 0px;
+    bottom: 0;
+    background: #EFF3F2;
+    box-shadow: 0px 0 8px 6px #EFF3F2;
 }
 
 .imc_preview_image_container {
     position: relative;
-    float: left;
+    display: inline-block;
 }
 
 .imc_preview_image_container.active:after,
@@ -87,12 +105,9 @@ body {
     margin-left: -10px;
 }
 
-
-
-
-
 .imc_preview_image_container
 .imc_preview_image {
+    position: relative;
     margin: 7px 0 0 7px;
     height: 80px;
     width: 80px;
@@ -100,33 +115,35 @@ body {
     box-shadow: 1px 1px 4px -1px rgba(0, 0, 0, 0.2);
 }
 
-.imc_preview_image_container.warning
-.imc_preview_image {
-    position: relative;
-}
-
-.imc_preview_image_container.warning
-.imc_preview_image:after {
-    content: '!';
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    background: #B02521;
-    bottom: 2px;
-    right: 2px;
-    font-size: 9px;
-    text-align: center;
-    line-height: 16px;
-    color: #fff;
-    border-radius: 10px;
-    font-weight: 100;
-    box-shadow: 1px 1px 3px 0px rgba(255, 255, 255, 0.2);
-}
-
-
 .imc_preview_image_container
 .imc_preview_image:hover {
     box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.5);
+}
+
+.imc_preview_image_container
+.imc_preview_image span {
+    position: absolute;
+    bottom: 2px;
+    left: 3px;
+    font-size: 9px;
+    line-height: 16px;
+    color: #fff;
+    font-weight: 300;
+    background: rgba(0,0,0,0.4);
+    border-radius: 3px;
+    padding: 0 2px;
+}
+
+.imc_preview_image_container
+.imc_preview_image span i {
+    display: none;
+}
+
+.imc_preview_image_container.warning
+.imc_preview_image span i {
+    display: inline-block;
+    padding-left: 4px;
+    color: #FF4E66;
 }
 
 
